2009-05-28  Kai Tietz  <kai.tietz@onevision.com>

        * gcc.c-torture/compile/20000211-1.c (size_t): Typedef size_t via
	__SIZE_TYPE__.
        * gcc.c-torture/compile/20010328-1.c (size_t): Likewise,
        * gcc.c-torture/compile/20030320-1.c (size_t): Likewise,
        * gcc.c-torture/compile/20030405-1.c (size_t): Likewise,
        * gcc.c-torture/compile/20030902-1.c (size_t): Likewise,
        * gcc.c-torture/compile/20060202-1.c (size_t): Likewise,
        * gcc.c-torture/compile/20080613-1.c (size_t): Likewise,
        * gcc.c-torture/compile/920428-2.c (size_t): Likewise,
        * gcc.c-torture/compile/980329-1.c (size_t): Likewise,
        * gcc.c-torture/compile/980816-1.c (size_t): Likewise,
        * gcc.c-torture/compile/pr32584.c (size_t): Likewise,
        * (__ssize_t): Likewise.
        * gcc.c-torture/compile/pr33173.c (size_t): Likewise,
        * gcc.c-torture/compile/pr33382.c (size_t): Likewise,
        * gcc.c-torture/compile/pr34334.c (size_t): Likewise,
        * gcc.c-torture/compile/pr34688.c (size_t): Likewise,
        * gcc.c-torture/compile/pr35043.c (size_t): Likewise,
        * gcc.c-torture/compile/pr37669.c (size_t): Likewise,
        * gcc.dg/20050629-1.c (size_t): Typedef size_t via __SIZE_TYPE__.
        * gcc.dg/pr33667.c (size_t): Likewise.
        * gcc.dg/prefetch-loop-arrays-1.c (size_t): Likewise.
        * gcc.dg/torture/pr39204.c (size_t): Likewise.
        * gcc.dg/tree-ssa/20041122-1.c (size_t): Likewise.
        * gcc.dg/tree-ssa/pr36908.c (size_t): Likewise.
        * gcc.dg/tree-ssa/pr38250.c (size_t): Likewise.
        * gcc.dg/tree-ssa/ssa-dse-10.c (size_t): Likewise.

2009-05-27  Kai TIetz  <kai.tietz@onevision.com>

	* g++.old-deja/g++.brendan/array1.C (array): Use __SIZE_TYPE__
	cast instead of assuming 0ul.
	* g++.old-deja/g++.brendan/crash64.C (size_t): Define it via
	__SIZE_TYPE__.
	(_type_desc): Make first argument const.
	* g++.old-deja/g++.jason/new3.C (dg-options): Add -Wno-long-long.
