@@ -1,7 +1,7 @@
 // PR c++/15209
 // { dg-options "-w" }
 
-typedef unsigned int size_t;
+__extension__ typedef __SIZE_TYPE__ size_t;
 typedef unsigned char uint8_t;
 typedef unsigned short int uint16_t;
 
