@@ -1,6 +1,6 @@
 /* { dg-do compile } */
 
-typedef long unsigned int size_t;
+__extension__ typedef __SIZE_TYPE__ size_t;
 void*   __valarray_get_memory(size_t __n);
 int*__restrict__
 __valarray_get_storage(size_t __n)
